alignments and issues sorted for the mobile view for landing page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -584,10 +584,7 @@
         margin-bottom: 12px;
         margin-top: 0px;
       }
-      .partnerOfferImg{
-        width: 200px;
-        height: 200px;  
-      }
+      
       .coloneImg{
         width: 350px;
         height: 400px;
@@ -1046,7 +1043,7 @@
       padding: 30px 30px;
       display: flex;
       flex-direction: column;
-      width: 100vw;
+      width: 100%;
       text-align: center;
       /* margin: 20px auto; */
       border-radius: 20px;
@@ -1299,7 +1296,7 @@
 
     .footerClass{
       /* margin-bottom: -200px; */
-      margin-left: -80px;
+      margin-left: 120px;
       /* margin-right: -100px; */
     }
     
